--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -24,13 +24,15 @@
     <main class="flex-1 p-6 overflow-y-auto">
         <div>
             <h1>Edit your notes</h1>
-            <form>
-                <input type="text" placeholder="<%=note.title%>"
+            <form class="h-full flex flex-col">
+                <input type="text" placeholder="<%=Note.title%> "
                         class="text-2xl font-bold w-full border-b-2 p-2 mb-4 outline-none focus:border-blue-500"
                         name="title" />
-                <textarea placeholder="<%=note.content%>" name="content"
-                        class="flex-1 p-4 border rounded-lg resize-none outline-none focus:ring-2 focus:ring-blue-400"></textarea>
-
+                <textarea placeholder="<%=Note.content%>" name="content"
+                        class="flex-1 p-4  border rounded-lg resize-none outline-none focus:ring-2 focus:ring-blue-400"></textarea>
+                <div class="mt-4 flex justify-end gap-3">
+                    <button type="submit" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Save</button>
+                </div>
             </form>
         </div>
     </main>
