--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,8 +1,13 @@
-
 <!-- Navbar -->
-  <header class="bg-gray-800  shadow-md px-6 py-4 flex justify-between items-center">
-    <h1 class="text-2xl  text-white font-bold">📝 My Notepad</h1>
-    <div>
-      <button class="text-sm px-3 py-2 rounded-lg bg-red-500 text-white hover:bg-red-600">Logout</button>
-    </div>
-  </header>
+<header
+  class="bg-gray-800 shadow-md px-6 py-4 flex justify-between items-center"
+>
+  <h1 class="text-2xl text-white font-bold">📝 My Notepad</h1>
+  <div>
+    <button
+      class="text-sm px-3 py-2 rounded-lg bg-red-500 text-white hover:bg-red-600"
+    >
+      Logout
+    </button>
+  </div>
+</header>
