--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,22 +4,27 @@
   <div class="flex w-screen h-[85vh]">
     <!-- Sidebar -->
     <aside class="w-1/4 bg-gray-400 shadow-md p-4 overflow-y-auto">
-      <div class="flex justify-between items-center ">
+      <div class="flex justify-between items-center">
         <h2 class="font-semibold text-lg">Notes</h2>
       </div>
       <ul class="space-y-2">
-      <% for(note of notes){%>
+        <% for(note of notes){%>
         <li>
-          <a href="/note/<%=note.id%>" class="block p-3 rounded-lg bg-gray-200 hover:bg-gray-50">
+          <a
+            href="/note/<%=note.id%>"
+            class="block p-3 rounded-lg bg-gray-200 hover:bg-gray-50"
+          >
             <h3 class="font-semibold truncate"><%=note.title%></h3>
             <p class="text-sm text-gray-600 truncate"><%=note.content%></p>
             <div class="date">
-                <p><%=note.written_at.toString().split(" ")[4]%></p>
-                <p><%=note.written_at.toString().split(" ").slice(0,4).join("-")%></p>
+              <p><%=note.written_at.toString().split(" ")[4]%></p>
+              <p>
+                <%=note.written_at.toString().split(" ").slice(0,4).join("-")%>
+              </p>
             </div>
           </a>
         </li>
-       <%}%>
+        <%}%>
       </ul>
     </aside>
 
@@ -27,15 +32,26 @@
     <main class="flex-1 p-6 overflow-y-auto">
       <h1 class="text-bold font-4xl">Write something...</h1>
       <form method="POST" action="/?_method=PUT" class="h-full flex flex-col">
-        <input type="text" placeholder="Note Title"
-               class="text-2xl font-bold w-full border-b-2 p-2 mb-4 outline-none focus:border-blue-500"
-               name="title" />
-               
-        <textarea placeholder="Write your notes here..." name="content"
-                  class="flex-1 p-4 border rounded-lg resize-none outline-none focus:ring-2 focus:ring-blue-400"></textarea>
+        <input
+          type="text"
+          placeholder="Note Title"
+          class="text-2xl font-bold w-full border-b-2 p-2 mb-4 outline-none focus:border-blue-500"
+          name="title"
+        />
+
+        <textarea
+          placeholder="Write your notes here..."
+          name="content"
+          class="flex-1 p-4 border rounded-lg resize-none outline-none focus:ring-2 focus:ring-blue-400"
+        ></textarea>
 
         <div class="mt-4 flex justify-end gap-3">
-          <button type="submit" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">Save</button>
+          <button
+            type="submit"
+            class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600"
+          >
+            Save
+          </button>
         </div>
       </form>
     </main>
